# antyswirus

./: .gitignore  README.md  antywirus.service  demo.sh  install.sh  pyproject.toml
contrib/: create-eicar.py  demo.py  seed-hash.py
contrib/antyswirusd/: antyswirusd.toml
contrib/systemd/: antyswirusd.service
src/antyswirus/: __init__.py  __main__.py  app.py  cli.py
src/antyswirus/tui/: __init__.py  app.py  client.py  theme.tcss
src/antyswirus/tui/data/: logo.txt
src/antyswirus/tui/screens/: __init__.py  main.py  quarantine.py  whitelist.py
src/antyswirus/tui/widgets/: __init__.py  dot_filler.py  keybinds.py  logo.py  modal.py
src/antyswirus_lib/: __init__.py  client.py  daemon_helpers.py  hashing.py  ipc.py  paths.py  protocols.py  types.py
src/antyswirusd/: __init__.py  __main__.py  app.py  cache.py  cli.py  config.py  cymru.py  daemon.py  database_hash_repo.py  engine.py  hash_db.py  logging_setup.py  malwarebazaar.py  monitor.py  paths.py  quarantine.py  queue.py  scanner.py  server.py  virusshare.py  whitelist.py
src/antyswirusd/modules/: __init__.py  hash_repository.py  quarantine.py  whitelist.py
tests/: README.md  conftest.py  test_antyswirus_lib.py  test_cache.py  test_config.py  test_cymru.py  test_daemon.py  test_database_hash_repo.py  test_engine.py  test_hash_db.py  test_integration.py  test_malwarebazaar.py  test_modules.py  test_monitor.py  test_paths.py  test_quarantine.py  test_queue.py  test_scanner.py  test_server.py  test_tui.py  test_virusshare.py  test_whitelist.py
