[project]
name = "antyswirus"
version = "0.1.0"
description = "Linux antivirus daemon and CLI"
readme = "README.md"
authors = [{ name = "kaykoe" }]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
]
license-files = ["LICENSE"]

[project.scripts]
antyswirus = "antyswirus:main"
antyswirusd = "antyswirusd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[dependency-groups]
ci = ["pytest>=8.4.2", "ruff>=0.15.6"]
dev = [
    "debugpy>=1.8.20",
    "pyspy>=0.1.1",
    "pytest>=8.4.2",
    "ruff>=0.15.6",
]
