[project]
name = "antyswirus"
version = "0.1.0"
description = "Linux antivirus daemon and CLI"
readme = "README.md"
authors = [{ name = "kaykoe" }]
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.22.1",
    "textual>=0.80",
    "typer>=0.12.0",
]
license-files = ["LICENSE"]

[project.scripts]
antyswirus = "antyswirus:main"
antyswirusd = "antyswirusd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[dependency-groups]
ci = ["pytest>=8.4.2", "ruff>=0.15.6"]
dev = [
    "debugpy>=1.8.20",
    "pyspy>=0.1.1",
    "pytest>=8.4.2",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "error",
    # subprocess.Popen captures pipes that gc sometimes closes with a
    # ResourceWarning; these are not test failures.
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning:subprocess",
]
markers = [
    "integration: tests that require a real antyswirusd subprocess",
]
